# eso-weave

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  eso-weave.code-workspace  release.toml
.github/workflows/: release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
addon/PixelBeacon/: PixelBeacon.lua  PixelBeacon.txt
assets/brand/: README.md  generate.sh
docs/: ESO-Weave-Specification-v0.1.0.md  ESO-Weave-Specification-v0.2.0.md  build-autopilot.md  releasing.md
docs/brand/: ESO-Weave-Brand-v1.md
docs/plans/: README.md  plan-001.md  plan-002.md  plan-003.md  plan-004.md  plan-005.md  plan-006.md  plan-007.md  plan-008.md
packaging/linux/: 70-eso-weave-uinput.rules  eso-weave.desktop
packaging/windows/: License.rtf
scripts/: changelog-section.sh  linux-build-deps.sh
specs/001-foundations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-input-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-weave-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-pixelbeacon-addon/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pixel-bus-reader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-beacon-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fishing-controller/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-latency-adaptive-delays/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-gui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-packaging-and-ci/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-installer-first-run/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-brand-ux-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-gui-ergonomics-autosave/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-weapon-bar-timing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-hotkey-detection-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-fishing-reliability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-fishing-weaving-docs/: plan.md  quickstart.md  spec.md  tasks.md
specs/018-eso-api-version-check/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-ui-hover-and-modal-fixes/: plan.md  spec.md  tasks.md
specs/020-spec-rewrite-and-fishing-docs/: plan.md  spec.md  tasks.md
specs/021-window-geometry-persistence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-primary-skills-controls/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-settings-modal-logging-keys/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-fishing-capture-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-fishing-interaction-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/026-fishing-bite-signal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/app/: beacon_light.rs  log_view.rs  mod.rs  (+6 more)
tests/: app_log_view.rs  app_session_state.rs  app_settings.rs  app_strings.rs  app_view_model.rs  beacon.rs  config.rs  fishing.rs  input_engine.rs  logging.rs  pixelbus.rs  weave_engine.rs  weave_latency.rs  weave_sequence.rs
wix/: main.wxs
(+101 files in other folders)
