[package]
name = "eso-weave"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "Desktop companion application for The Elder Scrolls Online."
license = "Apache-2.0"
repository = "https://github.com/h8rt3rmin8r/eso-weave"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
