[package]
name = "eso-weave"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "Desktop companion application for The Elder Scrolls Online."
license = "Apache-2.0"
repository = "https://github.com/h8rt3rmin8r/eso-weave"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Media",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
x11rb = "0.13"

[dev-dependencies]
tempfile = "3"
