[package]
name = "eso-weave"
version = "0.4.2"
edition = "2021"
rust-version = "1.96"
description = "Desktop companion application for The Elder Scrolls Online."
license = "Apache-2.0"
repository = "https://github.com/h8rt3rmin8r/eso-weave"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"
eframe = { version = "0.35", default-features = false, features = [
    "glow",
    "default_fonts",
    "x11",
    "wayland",
] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
x11rb = "0.13"

# Embeds the application icon into the Windows executable at build time. Only a
# build dependency on Windows hosts; the Linux build never pulls or runs it.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"

# Debian package metadata for cargo-deb (built by the pinned release pipeline with
# `cargo deb --no-build`). Pinned packaging config: changes are recorded as dated
# decisions in CHANGELOG.md.
[package.metadata.deb]
section = "utils"
priority = "optional"
depends = "$auto"
extended-description = """
ESO Weave is a desktop companion for The Elder Scrolls Online. It runs entirely
outside the game: an input engine intercepts and synthesizes keys while the game
window is focused, a weave engine executes combat action sequences, and an optional
fishing module reads a pixel-bus signal from the embedded PixelBeacon addon.

Linux input interception needs access to input devices. Add your user to the
"input" group, or rely on the packaged udev rule for /dev/uinput. See the README
under /usr/share/doc/eso-weave/ for details.
"""
assets = [
    ["target/release/eso-weave", "usr/bin/", "755"],
    ["packaging/linux/eso-weave.desktop", "usr/share/applications/", "644"],
    ["packaging/linux/eso-weave.png", "usr/share/icons/hicolor/256x256/apps/eso-weave.png", "644"],
    ["packaging/linux/70-eso-weave-uinput.rules", "usr/lib/udev/rules.d/70-eso-weave-uinput.rules", "644"],
    ["README.md", "usr/share/doc/eso-weave/README.md", "644"],
]
